<resources>
    <string name="app_name">抢必中</string>
    <string name="home_page">首页</string>
    <string name="yimei">医美</string>
    <string name="shopping">商城</string>
    <string name="shopping_car">购物车</string>
    <string name="me">我的</string>
    <string name="search">搜索商品</string>
    <string name="collection">移入收藏夹</string>
    <string name="delete">删除</string>
    <string name="all_select">全选</string>
    <string name="tv_more">查看全部</string>
    <!--<string name="kill">限时秒杀</string>-->
    <string name="kill">今日必抢</string>
    <string name="purchase">立即抢</string>
    <string name="open">展开全部</string>
    <string name="take_up">收起</string>
    <string name="get_code_tv">获取验证码</string>
    <string name="rule">（1）每人每天必须支付了预付金才有抽奖资格 \n（2）每人每天必须支付了预付金才有抽奖资格 \n（3）每人每天必须支付了预付金才有抽奖资格</string>
    
    <!--api-->
    <!--<string name="server_address">http://192.168.1.157:8010</string>-->
    <!--<string name="server_address">http://testaml.whmnx.com/Api</string>-->
    <string name="server_address">http://qbz.aimeilian.com.cn/Api</string>
    <!--注册-->

    <string name="register">/api/user/register</string>
    <!--修改密码-->
    <string name="updatePwd">/api/user/updatePwd</string>
    <!--修改昵称-->
    <string name="updateUserNick">/api/user/updateUserNick</string>
    <!--修改头像-->
    <string name="updateHeadImage">/api/user/updateHeadImage</string>
    <!--发送验证码-->
    <string name="sendSmsCode">/api/user/sendsmscode</string>
    <!--登录-->
    <string name="login">/api/user/login</string>
    <!--首页-->
    <string name="homeIndex">/api/home/index</string>
    <!--限时折扣-->
    <string name="goodsrushlist">/api/home/goodsrushlist</string>
    <!--时间-->
    <string name="goodsrushtimelist">/api/home/goodsrushtimelist</string>
    <!--订单列表-->
    <string name="orderlist">/api/home/orderlist</string>
    <!--商品详情-->
    <string name="goodsrushinfo">/api/home/goodsrushinfo</string>
    <!--抢购下单-->
    <string name="submitOrder">/api/app/rushGoods/submitOrder</string>
    <!--开始抢购-->
    <string name="rushbuy">/api/app/rushGoods/buy</string>
    <!--添加地址-->
    <string name="addAddress">/api/address/add</string>
    <!--删除地址-->
    <string name="deleteAddress">/api/address/delete</string>
    <!--收货地址-->
    <string name="getaddresslist">/api/address/getaddresslist</string>
    <!--设置默认地址-->
    <string name="setdefault">/api/address/setdefault</string>
    <!--充值下单-->
    <string name="submitorder">/api/app/recharge/submitorder</string>


    <string name="rechargequery">/api/home/recharge/query</string>

    <string name="awardrecorduserlist">/api/home/awardrecorduserlist</string>

    <!--最新揭晓-->
    <string name="awardlist2">/api/home/awardlist2</string>
    <!--支付宝支付-->
    <string name="alipay">/api/pay/alipay</string>
    <!--微信支付-->
    <string name="wechatpay">/api/pay/wechatpay</string>

    <string name="myawardlist">/api/home/myawardlist</string>
    <!--我的抢购记录-->
    <string name="myrushgoodsrecord">/api/home/myrushgoodsrecord</string>

    <!--抽奖详情-->
    <string name="awardInfo">/api/home/awardInfo</string>
    <!--抽奖列表-->
    <string name="awardlist">/api/home/awardlist</string>
    <!--查询充值记录信息-->
    <string name="recordquery">/api/home/recharge/recordquery</string>
    <!--中奖 支付尾款-->
    <string name="buy">/api/app/awardGoods/buy</string>
    <!--抽奖预约下单-->
    <string name="awardSubmitOrder">/api/app/awardGoods/submitOrder</string>
    <!--确认收货-->
    <string name="collectgoods">/api/app/confirm/collectgoods</string>
    <!--放弃抢购-->
    <string name="abandon">/api/app/rushGoods/abandon</string>
    <!--修改支付密码-->
    <string name="updatePayPwd">/api/user/updatePayPwd</string>
    <!--验证支付密码-->
    <string name="validatePay">/api/user/validatePay</string>
    <!--找回密码-->
    <string name="retrievePwd">/api/user/retrievePwd</string>
    <!--医美首页-->
    <string name="medicalIndex">/api/home/medicalIndex</string>
    <!--医美商品列表-->
    <string name="medicalsearchlist">/api/home/medicalsearchlist</string>
    <!--医美商品详情-->
    <string name="getmedicaldetail">/api/home/getmedicaldetail</string>
    <!--医美店铺详情-->
    <string name="getmedicalstorelist">/api/home/getmedicalstorelist</string>
    <!--商品评价列表-->
    <string name="getcommentlist">/api/home/getcommentlist</string>
    <!--添加收藏-->
    <string name="addcollection">/api/collection/addcollection</string>
    <!--取消收藏-->
    <string name="cannercollection">/api/collection/cannercollection</string>
    <!--收藏列表-->
    <string name="getcollectionlist">/api/collection/getcollectionlist</string>
    <!--批量收藏-->
    <string name="addcollectionlist">/api/collection/addcollectionlist</string>
    <!--批量取消收藏-->
    <string name="cannercollectionlist">/api/collection/cannercollectionlist</string>


    <!--商城-->

    <!--商城首页-->
    <string name="getshoppingindex">/api/home/getshoppingindex</string>
    <!--商城商品列表-->
    <string name="goodssearchlist">/api/home/goodssearchlist</string>
    <!--商城商品详情-->
    <string name="getgoodsdetail">/api/home/getgoodsdetail</string>
    <!--返回商品规格属性-->
    <string name="getgoodsspecattr">/api/home/getgoodsspecattr</string>
    <!--提交商品评论-->
    <string name="submitcommentinfo">/api/app/submitcommentinfo</string>
    <!--提交商城订单-->
    <string name="submitshoppingorder">/api/app/submitshoppingorder</string>
    <!--确认订单数据-->
    <string name="confirmorder">/api/app/confirmorder</string>
    <!--提交申请退款-->
    <string name="submitrefund">/api/app/submitrefund</string>
    <!--返回商城商铺详情-->
    <string name="getshoppingstoredetail">/api/home/getshoppingstoredetail</string>
    <!--取消退款-->
    <string name="cannerrefund">/api/app/cannerrefund</string>




    <!--购物车-->

    <!--添加到购物车-->
    <string name="addcar">/api/buycar/addcar</string>
    <!--购物车删除-->
    <string name="deletecars">/api/buycar/deletecars</string>
    <!--修改购物车信息-->
    <string name="updatecar">/api/buycar/updatecar</string>
    <!--修改购物车商品数量-->
    <string name="updatecarnum">/api/buycar/updatecarnum</string>
    <!--购物车列表-->
    <string name="getcarlist">/api/buycar/getcarlist</string>
    <!--上传图片-->
    <string name="uploadfile">/api/file/upload/uploadfile</string>

    <string name="uploadfilepublic">/api/file/upload/uploadfilepublic</string>
    <!--商品长图-->
    <string name="goodscontext">/api/file/upload/uploadfile/goods/context</string>

    <string name="orderdetail">/api/home/orderdetail</string>
    <!--商家入驻-->
    <string name="submitadmission">/api/storemanager/submitadmission</string>
    <!--提交商品信息-->
    <string name="submitgoods">/api/storemanager/submitgoods</string>

    <string name="updategoodsinfo">/api/storemanager/updategoodsinfo</string>
    <!--商品类型下拉列表 商城0 医美1-->
    <string name="getgoodstypelist">/api/storemanager/getgoodstypelist</string>


    <string name="getgoodslist">/api/storemanager/getgoodslist</string>

    <string name="addgoodsbanner">/api/storemanager/addgoodsbanner</string>

    <string name="getgoodsbanner">/api/storemanager/getgoodsbanner</string>

    <string name="getgoodsspeclist">/api/storemanager/getgoodsspeclist</string>
    <!--修改规格-->
    <string name="updategoodsspec">/api/storemanager/updategoodsspec</string>
    <!--新增规格-->
    <string name="addgoodsspec">/api/storemanager/addgoodsspec</string>
    <!--删除规格-->
    <string name="deletegoodsspec">/api/storemanager/deletegoodsspec</string>
    <!--上 下 架店铺单个商品-->
    <string name="setgoodsgoup">/api/storemanager/setgoodsgoup</string>
    <!--上 下 架店铺所有商品-->
    <string name="setstoregoodsgoup">/api/storemanager/setstoregoodsgoup</string>

    <string name="agentshopquery">/api/home/agentshop/query</string>

    <string name="getshardcode">/api/home/getshardcode</string>
    <!--商家订单-->
    <string name="getorderlist">/api/storemanager/getorderlist</string>

    <string name="returngoods">/api/storemanager/returngoods</string>

    <string name="confirmused">/api/storemanager/confirmused</string>
    <!--发货-->
    <string name="sendgoods">/api/storemanager/sendgoods</string>
    <!--代理商充值类型-->
    <string name="querytype">/api/home/agentshop/querytype</string>
    <string name="getexpressdelivery">/api/storemanager/getexpressdelivery</string>
    <string name="getagentshopinfo">/api/home/getagentshopinfo</string>
    <string name="getagentsalesrecord">/api/home/getagentsalesrecord</string>

    <!--医美-->
    <!--医美下单-->
    <string name="submitmedicalorder">/api/app/submitmedicalorder</string>
    <!--代付用户查询-->
    <string name="getagentuserid">/api/app/getagentuserid</string>
    <string name="orderdetailmedical">/api/home/orderdetailmedical</string>
    <string name="canneragentpay">/api/app/canneragentpay</string>
    <string name="cannerorder">/api/app/cannerorder</string>
    <string name="paymedicalorder">/api/app/paymedicalorder</string>
    <string name="giveorder"> /api/app/giveorder</string>
    <string name="getmessagenotice">/api/home/getmessagenotice</string>
    <string name="getcouponlist">/api/home/getcouponlist</string>
    <string name="getgivelist">/api/home/getgivelist</string>
    <string name="giveorderdetail">/api/home/giveorderdetail</string>

    <string name="getcode_again">重新获取</string>
    <string name="timer_message">秒</string>
    <string name="getnoticecount">/api/home/getnoticecount</string>
    <string name="setnoticeisread">/api/app/setnoticeisread</string>
    <string name="feedback">/api/app/feedback</string>
    <string name="getappversion">/api/app/getappversion</string>
    <string name="downloadapp">/api/app/downloadapp</string>
    <string name="submitquestion">/api/app/submitquestion</string>

    <string name="json">{\"appId\":\"wx572d4c6551e02121\",\"partnerId\":\"1511222231\",\"prepayId\":\"wx07155714958843be0d7cb3943232466596\",\"nonceStr\":\"1595af6435015c77a7149e92a551338e\",\"timeStamp\":\"1536307035\",\"packageValue\":\"Sign=WXPay\",\"sign\":\"FD5FCB7922EFCA44CD55C14AAA5929AC\"}</string>





</resources>
