<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm_1"
        android:background="#cccccc"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <TextView
           android:id="@+id/tv_luck_draw"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:drawableTop="@drawable/btn_home_page"
           android:gravity="center"
           android:padding="@dimen/dm_3"
           android:text="@string/home_page"
           android:textColor="@color/tv_navigation"
           android:textSize="12sp" />

       <TextView
           android:id="@+id/tv_my_luck_draw"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:drawableTop="@drawable/btn_yimei"
           android:gravity="center"
           android:padding="@dimen/dm_3"
           android:text="@string/yimei"
           android:textColor="@color/tv_navigation"
           android:textSize="12sp" />

       <TextView
           android:id="@+id/tv_rule"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:drawablePadding="@dimen/dm_2"
           android:drawableTop="@drawable/btn_shoping"
           android:gravity="center"
           android:padding="@dimen/dm_3"
           android:text="@string/shopping"
           android:textColor="@color/tv_navigation"
           android:textSize="12sp"/>


   </LinearLayout>
</LinearLayout>