<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_f5f5f5">
   <include layout="@layout/layout_title"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_goods_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm_1"
        android:background="@color/bg_D3D3D3"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm_49"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_all_select"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.57"
            android:background="@color/white"
            android:text="@string/all_select"
            android:textSize="15sp"
            android:textColor="@color/tv_000"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/dm_7"
            android:paddingStart="@dimen/dm_15"
            android:drawableLeft="@drawable/ic_selece_no"/>
        <TextView
            android:id="@+id/tv_collection"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/tv_000"
            android:textSize="15sp"
            android:background="@color/bg_eeeeee"
            android:text="@string/collection"
            android:gravity="center"
            android:layout_weight="1"/>
        <LinearLayout
            android:id="@+id/ll_total"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/dm_5"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_gravity="right"
                android:textColor="@color/tv_navigation"
                android:text="合计："/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="right">
                <TextView
                    android:id="@+id/tv_moeny"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/goods_price"
                    android:textSize="16sp"
                    android:text="5000"
                    android:layout_gravity="bottom"/>
                <ImageView
                    android:layout_width="@dimen/dm_24"
                    android:layout_height="@dimen/dm_15"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/dm_2"
                    android:layout_marginLeft="@dimen/dm_5"
                    android:src="@drawable/ic_yudou" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@drawable/bg_color_btn"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/delete"
            />
    </LinearLayout>
</LinearLayout>